--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
         <title> Run Buddy</title>
     </head>
     <body>
-        <h1>RUN BUDDY</h1>
-        What We Do
-        🏃
+        <h1>RUN BUDDY</h1><br>
+        What We Do <br>
+        What Your Trainers Do <br>
+        Reach Out
     </body>
 </html>
