html outline and gitignore

--- a/index.html
+++ b/index.html
@@ -2,12 +2,43 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8"/>
-        <title> Run Buddy</title>
+        <title>Run Buddy</title>
     </head>
     <body>
-        <h1>RUN BUDDY</h1><br>
-        What We Do <br>
-        What Your Trainers Do <br>
-        Reach Out
+        <!-- nav -->
+        <header>
+            <h1>RUN BUDDY</h1>
+        </header>
+        
+        <!-- hero/ jumbotron -->
+<section>
+
+</section>
+
+        <!-- "what we do" -->
+        <section>
+            <h2>What We do</h2>
+        </section>
+
+        <!-- "what you do" -->
+        <section>
+            <h2>What You do</h2>
+        </section>
+
+        <!-- "meet the trainers" -->
+        <section>
+            <h2>Meet The Trainers</h2>
+        </section>
+
+        <!-- "reach out" -->
+        <section>
+            <h2>Reach Out</h2>
+        </section>
+
+<!-- footer -->
+ <footer>
+     <h2> ❤️ Made with love by Run Buddy</h2>
+ </footer>
+
     </body>
 </html>
