--- a/index.html
+++ b/index.html
@@ -7,7 +7,27 @@
     <body>
         <!-- nav -->
         <header>
-            <h1>RUN BUDDY</h1>
+            <h1>
+                <a href="/">RUN BUDDY</h1></a>
+                <nav>
+                   <!-- unordered list element -->
+                   <ul>
+                       <!-- list item element -->
+                       <li>
+                           <!-- anchor element -->
+                           <a href="#what-we-do">What We Do</a>
+                       </li>
+                       <li>
+                           <a href="#what-you-do">WHat You Do</a>
+                       </li>
+                       <li>
+                           <a href="#your-trainers">Your Trainers</a>
+                       </li>
+                       <li>
+                           <a href="#reach-out">Reach Out</a>
+                       </li>
+                   </ul> 
+                </nav>
         </header>
         
         <!-- hero/ jumbotron -->
