--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8"/>
+        <link rel="stylesheet" href="assets/css/style.css"/>
         <title>Run Buddy</title>
     </head>
     <body>
@@ -18,7 +19,7 @@
                            <a href="#what-we-do">What We Do</a>
                        </li>
                        <li>
-                           <a href="#what-you-do">WHat You Do</a>
+                           <a href="#what-you-do">What You Do</a>
                        </li>
                        <li>
                            <a href="#your-trainers">Your Trainers</a>
