form css styling

--- a/index.html
+++ b/index.html
@@ -31,20 +31,20 @@
                 </nav>
         </header> 
         <!-- hero -->
-<section>
-    <div>
+<section class="hero">
+    <div class="hero-form">
         <h3>Get Started Today!</h3>
         <p>Fill out this form and one of our trainers will schedule a consult.</p>
         <!-- add form -->
         <form>
             <label for="name">Enter full name:</label>
-            <input type="text" placeholder="Your Name" name="name" id="name" />
+            <input type="text" placeholder="Your Name" name="name" id="name" class ="form-input" />
 
             <label for="email">Enter Email Address:</label>
-            <input type="email" placeholder="Email Address" name="email" id="email" />
+            <input type="email" placeholder="Email Address" name="email" id="email" class ="form-input" />
 
             <label for="phone">Enter Phone Number:</label>
-            <input type="tel" placeholder="Phone Number" name="phone" id="phone" />
+            <input type="tel" placeholder="Phone Number" name="phone" id="phone" class ="form-input" />
             <p>
                 Have you worked with a trainer before?
                 <input type="radio" name="trainer-confirm" id="trainer-yes"/>
@@ -56,7 +56,7 @@
                 <label for="checkbox">I acknowledge that I am at least 18 years of age.</label>
                 <input type="checkbox" name="age-confirm" id="checkbox"/>
             </p>
-            <button type="submit">Get Running!</button>
+            <button type="submit" class="button">Get running!</button>
         </form>
     </div>
 </section>
@@ -83,12 +83,13 @@
         </section>
 
 <!-- footer -->
- <footer>
+<footer>
      <h2> ❤️ Made with love by Run Buddy</h2>
      <div>
         <a href="#">Read Our Privacy Policy</a> <br />
         &copy; 2019 Run Buddy, Inc.
     </div>
 </footer>
+
 </body>
 </html>
