--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <label for="checkbox">I acknowledge that I am at least 18 years of age.</label>
                 <input type="checkbox" name="age-confirm" id="checkbox"/>
             </p>
-            <button type="submit" class="button">Get running!</button>
+            <button type="submit">Get running!</button>
         </form>
     </div>
 </section>
