--- a/index.html
+++ b/index.html
@@ -63,22 +63,52 @@
 <!-- end hero -->
 
         <!-- "what we do" -->
-        <section>
+        <section id="what-we-do">
             <h2>What We do</h2>
+            <p>
+                butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct trade 
+                Blue Bottle chillwave you probably haven't heard of them single-origin coffee Vice fanny pack 
+                fixie Odd Future Austin fingerstache pickled twee synth Wes Anderson Thundercats viral bitters 
+                flannel meggings narwhal Marfa Schlitz sustainable Intelligentsia umami deep v craft
+            </p>
         </section>
 
         <!-- "what you do" -->
-        <section>
+        <section id="what-you-do">
             <h2>What You do</h2>
+            <img src="assets/images/01-04-svgs/step-1.svg" alt="">
+            <div>
+                <h3>Step 1: Fill Out the Form Above.</h3>
+                    <p>You're already here, so why not?</p>
+            </div>
+
+            <div>
+                <h3>Step 2: Consult with One of Our Trainers. </h3>
+                <img src="assets/images/01-04-svgs/step-2.svg" alt="">
+                    <p>Are you here to build muscle, lose weight, or just feel good?</p>
+                </h3>
+            </div>
+
+            <div>
+                <h3>Step 3: Get Running.</h3>
+                <img src="assets/images/01-04-svgs/step-3.svg" alt="">
+                    <p>Hit the ground running (literally) once your trainer lays out your plan. </p>
+            </div>
+
+            <div>
+                <h3>Step 4: See Results.</h3>
+                <img src="assets/images/01-04-svgs/step-4.svg" alt="">
+                    <p>Bi-weekly checkins with your trainer will keeep you focused.</p>
+            </div>
         </section>
 
         <!-- "meet the trainers" -->
-        <section>
+        <section id="your-trainers">
             <h2>Meet The Trainers</h2>
         </section>
 
         <!-- "reach out" -->
-        <section>
+        <section id="reach-out">
             <h2>Reach Out</h2>
         </section>
 
