--- a/index.html
+++ b/index.html
@@ -62,22 +62,31 @@
 </section>
 <!-- end hero -->
 
+
         <!-- "what we do" -->
-        <section id="what-we-do">
+        <section id="what-we-do" class="intro">
             <h2>What We do</h2>
-            <p>
-                butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct trade 
-                Blue Bottle chillwave you probably haven't heard of them single-origin coffee Vice fanny pack 
-                fixie Odd Future Austin fingerstache pickled twee synth Wes Anderson Thundercats viral bitters 
-                flannel meggings narwhal Marfa Schlitz sustainable Intelligentsia umami deep v craft
-            </p>
+                <p>
+                    butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct trade 
+                    Blue Bottle chillwave you probably haven't heard of them single-origin coffee Vice fanny pack 
+                    fixie Odd Future Austin fingerstache pickled twee synth Wes Anderson Thundercats viral bitters 
+                    flannel meggings narwhal Marfa Schlitz sustainable Intelligentsia umami deep v craft
+                </p>  
         </section>
 
+
+
+
+
+
+
+
+
         <!-- "what you do" -->
-        <section id="what-you-do">
+        <section id="what-you-do" class="">
             <h2>What You do</h2>
-            <img src="assets/images/01-04-svgs/step-1.svg" alt="">
             <div>
+            <img src="assets/images/01-04-svgs/step-1.svg" alt="">
                 <h3>Step 1: Fill Out the Form Above.</h3>
                     <p>You're already here, so why not?</p>
             </div>
