--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
         <!-- "what we do" -->
         <section id="what-we-do" class="intro">
-            <h2>What We do</h2>
+            <h2 class="section-title primary-border">What We do</h2>
                 <p>
                     butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct trade 
                     Blue Bottle chillwave you probably haven't heard of them single-origin coffee Vice fanny pack 
@@ -73,39 +73,30 @@
                     flannel meggings narwhal Marfa Schlitz sustainable Intelligentsia umami deep v craft
                 </p>  
         </section>
-
-
-
-
-
-
-
-
-
         <!-- "what you do" -->
-        <section id="what-you-do" class="">
-            <h2>What You do</h2>
+        <section id="what-you-do" class="steps">
+            <h2 class="section-title secondary-border">What You do</h2>
             <div>
             <img src="assets/images/01-04-svgs/step-1.svg" alt="">
-                <h3>Step 1: Fill Out the Form Above.</h3>
+                <h3>Step 1: <span>Fill Out the Form Above.</span></h3>
                     <p>You're already here, so why not?</p>
             </div>
 
             <div>
-                <h3>Step 2: Consult with One of Our Trainers. </h3>
+                <h3>Step 2: <span>Consult with One of Our Trainers. </span></h3>
                 <img src="assets/images/01-04-svgs/step-2.svg" alt="">
                     <p>Are you here to build muscle, lose weight, or just feel good?</p>
                 </h3>
             </div>
 
             <div>
-                <h3>Step 3: Get Running.</h3>
+                <h3><span>Step 3: Get Running.</span></h3>
                 <img src="assets/images/01-04-svgs/step-3.svg" alt="">
                     <p>Hit the ground running (literally) once your trainer lays out your plan. </p>
             </div>
 
             <div>
-                <h3>Step 4: See Results.</h3>
+                <h3><span>Step 4: See Results.</span></h3>
                 <img src="assets/images/01-04-svgs/step-4.svg" alt="">
                     <p>Bi-weekly checkins with your trainer will keeep you focused.</p>
             </div>
@@ -113,12 +104,12 @@
 
         <!-- "meet the trainers" -->
         <section id="your-trainers">
-            <h2>Meet The Trainers</h2>
+            <h2 class="section-title">Meet The Trainers</h2>
         </section>
 
         <!-- "reach out" -->
         <section id="reach-out">
-            <h2>Reach Out</h2>
+            <h2 class="section-title">Reach Out</h2>
         </section>
 
 <!-- footer -->
