--- a/index.html
+++ b/index.html
@@ -103,13 +103,55 @@
         </section>
 
         <!-- "meet the trainers" -->
-        <section id="your-trainers">
-            <h2 class="section-title">Meet The Trainers</h2>
+        <section id="your-trainers" class="trainers">
+            <h2 class="section-title primary-border">Meet The Trainers</h2>
+                <!-- first trainer bio -->
+                <article class="trainer">
+                    <img src="assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron">
+                    <div class="trainer-bio text-left">
+                        <h3>Arron Stephens</h3>
+                        <h4>Speed / Strength</h4>
+                        <p>
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                            Nemo quasi harum quos ut sit quis omnis aliquam iste, 
+                            tempore illum sapiente nostrum placeat dolore minus, beatae quisquam? 
+                            Porro, repellendus eligendi!
+                        </p>
+                    </div>
+                </article>
+                <!-- second trainer bio -->
+                <article class="trainer">
+                    <div class="trainer-bio text-right">
+                        <h3>Joanna Gill</h3>
+                        <h4>Endurance</h4>
+                        <p>
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                            Dolorem, mollitia necessitatibus. 
+                            Aliquam nemo vitae doloribus ut modi quia ipsum repellendus! 
+                            Laudantium nam suscipit sequi facere sint in quibusdam earum ex?
+                        </p>
+                    </div>
+                    <img src="assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout">
+                </article>
+                <!-- third trainer bio -->
+                <article class="trainer">
+                    <img src="assets/images/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights">
+                    <div class="trainer-bio text-left">
+                        <h3>Harry "The Headband" Smith</h3>
+                        <h4>Strength</h4>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                            Doloremque incidunt quibusdam corporis nostrum accusamus in ab distinctio, 
+                            tempora ducimus delectus deleniti nisi optio beatae atque ratione vero consequuntur? 
+                            Cum, officiis!
+                        </p>
+                    </div>
+                </article>
         </section>
 
         <!-- "reach out" -->
         <section id="reach-out">
-            <h2 class="section-title">Reach Out</h2>
+            <h2 class="section-title secondary-border">Reach Out</h2>
         </section>
 
 <!-- footer -->
