--- a/index.html
+++ b/index.html
@@ -32,10 +32,20 @@
         </header> 
         <!-- hero -->
 <section class="hero">
+    <!-- hero message left -->
+    <div class="hero-cta">
+        <h2>Start Building Habits.</h2>
+        <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+            Sed iste necessitatibus consequuntur officia illo commodi cum sit voluptate suscipit, 
+            praesentium excepturi et at. 
+            Incidunt autem odit dolorum? Minima, quos iste!
+        </p>
+    </div>
     <div class="hero-form">
         <h3>Get Started Today!</h3>
         <p>Fill out this form and one of our trainers will schedule a consult.</p>
-        <!-- add form -->
+        <!-- hero form right-->
         <form>
             <label for="name">Enter full name:</label>
             <input type="text" placeholder="Your Name" name="name" id="name" class ="form-input" />
