--- a/index.html
+++ b/index.html
@@ -168,7 +168,19 @@
                     frameborder="0" style="border:0;" 
                     allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
                 </div>
+                <!-- add contact form -->
+                <div class= "contact-form">
+                    <h3>Contact Us</h3>
+                    <form>
+                        <label for="contact-name">Your Name</label>
+                        <input type="text" id="contact-name" placeholder="Your Name"/>
 
+                        <label for="contact-message">Message</label>
+                        <textarea id="contact-message" placeholder="Message"></textarea>
+                        <button type="submit">Submit</button>
+                    </form>
+                </div>
+                <!-- contact information -->
                 <div>
                     <h3>Run Buddy</h3>
                     <p>
