add css to hero and flexbox to what you do section

--- a/index.html
+++ b/index.html
@@ -75,17 +75,22 @@
 
         <!-- "what we do" -->
         <section id="what-we-do" class="intro">
+            <div class="flex-row">
             <h2 class="section-title primary-border">What We do</h2>
+            </div>
+            <div class="flex-row">
                 <p>
                     butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct trade 
                     Blue Bottle chillwave you probably haven't heard of them single-origin coffee Vice fanny pack 
                     fixie Odd Future Austin fingerstache pickled twee synth Wes Anderson Thundercats viral bitters 
                     flannel meggings narwhal Marfa Schlitz sustainable Intelligentsia umami deep v craft
-                </p>  
+                </p> 
+            </div>
         </section>
         <!-- "what you do" -->
         <section id="what-you-do" class="steps">
-            <h2 class="section-title secondary-border">What You do</h2>
+            <div class="flex-row">
+            <h2 class="section-title secondary-border">What You do</h2></div>
             <div>
             <img src="assets/images/01-04-svgs/step-1.svg" alt="">
                 <h3>Step 1: <span>Fill Out the Form Above.</span></h3>
@@ -114,7 +119,8 @@
 
         <!-- "meet the trainers" -->
         <section id="your-trainers" class="trainers">
-            <h2 class="section-title primary-border">Meet The Trainers</h2>
+            <div class="flex-row">
+            <h2 class="section-title primary-border">Meet The Trainers</h2></div>
                 <!-- first trainer bio -->
                 <article class="trainer">
                     <img src="assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron">
@@ -161,7 +167,8 @@
 
         <!-- "reach out" -->
         <section id="reach-out" class="contact">
-            <h2 class="section-title secondary-border">Reach Out</h2>
+            <div class="flex-row">
+            <h2 class="section-title secondary-border">Reach Out</h2></div>
             <div class="contact-info">
                 <div>
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3445.276855835289!2d-97.74156684920993!3d30.286179081705708!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8644b59cf606aa5b%3A0x28302ad990bffda9!2s110%20Inner%20Campus%20Drive%2C%20Austin%2C%20TX%2078705!5e0!3m2!1sen!2sus!4v1611685230185!5m2!1sen!2sus" 
