--- a/index.html
+++ b/index.html
@@ -147,15 +147,18 @@
         </section>
 
         <!-- "meet the trainers" -->
-        <section id="your-trainers" class="trainers">
+        <section id="your-trainers">
             <div class="flex-row">
             <h2 class="section-title primary-border">Meet The Trainers</h2></div>
+
+            <!-- flexbox container starts for trainers -->
+            <div class="trainers">
                 <!-- first trainer bio -->
                 <article class="trainer">
                     <img src="assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron">
-                    <div class="trainer-bio text-left">
-                        <h3>Arron Stephens</h3>
-                        <h4>Speed / Strength</h4>
+                    <div class="trainer-bio">
+                        <h3 class="trainer-name">Arron Stephens</h3>
+                        <h4 class="trainer-role">Speed / Strength</h4>
                         <p>
                             Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
                             Nemo quasi harum quos ut sit quis omnis aliquam iste, 
@@ -166,9 +169,10 @@
                 </article>
                 <!-- second trainer bio -->
                 <article class="trainer">
-                    <div class="trainer-bio text-right">
-                        <h3>Joanna Gill</h3>
-                        <h4>Endurance</h4>
+                    <img src="assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout">
+                    <div class="trainer-bio">
+                        <h3 class="trainer-name">Joanna Gill</h3>
+                        <h4 class="trainer-role">Endurance</h4>
                         <p>
                             Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
                             Dolorem, mollitia necessitatibus. 
@@ -176,14 +180,13 @@
                             Laudantium nam suscipit sequi facere sint in quibusdam earum ex?
                         </p>
                     </div>
-                    <img src="assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout">
                 </article>
                 <!-- third trainer bio -->
                 <article class="trainer">
                     <img src="assets/images/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights">
-                    <div class="trainer-bio text-left">
-                        <h3>Harry "The Headband" Smith</h3>
-                        <h4>Strength</h4>
+                    <div class="trainer-bio">
+                        <h3 class="trainer-name">Harry "The Headband" Smith</h3>
+                        <h4 class="trainer-role">Strength</h4>
                         <p>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                             Doloremque incidunt quibusdam corporis nostrum accusamus in ab distinctio, 
@@ -192,6 +195,7 @@
                         </p>
                     </div>
                 </article>
+            </div>
         </section>
 
         <!-- "reach out" -->
