--- a/index.html
+++ b/index.html
@@ -203,10 +203,23 @@
             <div class="flex-row">
             <h2 class="section-title secondary-border">Reach Out</h2></div>
             <div class="contact-info">
+            <!-- flexbox for reach out -->
+            <div class="contact-info">
+            <!-- contact information -->
                 <div>
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3445.276855835289!2d-97.74156684920993!3d30.286179081705708!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8644b59cf606aa5b%3A0x28302ad990bffda9!2s110%20Inner%20Campus%20Drive%2C%20Austin%2C%20TX%2078705!5e0!3m2!1sen!2sus!4v1611685230185!5m2!1sen!2sus" 
-                    frameborder="0" style="border:0;" 
-                    allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                    <h3>Run Buddy</h3>
+                    <p>
+                        Any questions or concerns before signing up?
+                        <br/>
+                        Let us know and we'll be happy to talk to you!
+                    </p>
+                    <address>
+                        55 Main Street <br/>
+                        Some Town, Ca <br/>
+                        12345 <br/>
+                        P: <a href="tel:555.786.2839">555.RUN.BUDZ (555.786.2839)</a><br/>
+                        E: <a href="mailto://info@runbuddy.io">info@runbuddy.io</a><br/>
+                    </address>
                 </div>
                 <!-- add contact form -->
                 <div class= "contact-form">
@@ -220,22 +233,11 @@
                         <button type="submit">Submit</button>
                     </form>
                 </div>
-                <!-- contact information -->
-                <div>
-                    <h3>Run Buddy</h3>
-                    <p>
-                        Any questions or concerns before signing up?
-                        <br/>
-                        Let us know and we'll be happy to talk to you!
-                        <address>
-                        55 Main Street <br/>
-                        Some Town, Ca <br/>
-                        12345 <br/>
-                        P: 555.RUN.BUDZ (555.786.2839) <br/>
-                        E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a><br/>
-                        </address>
-                    </p>
-                </div>
+                <!-- map -->
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3445.276855835289!2d-97.74156684920993!3d30.286179081705708!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8644b59cf606aa5b%3A0x28302ad990bffda9!2s110%20Inner%20Campus%20Drive%2C%20Austin%2C%20TX%2078705!5e0!3m2!1sen!2sus!4v1611685230185!5m2!1sen!2sus" 
+                    frameborder="0" style="border:0;" 
+                    allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+            </div>
             </div>
         </section>
 
